@@ -1,6 +1,6 @@
 <h1 class="entry-title">${POST_TITLE}</h1>
 <header class="entry-meta">
-  <time class="entry-date"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${DATE}</a></time>
+  <time class="entry-date" datetime="${DATETIME}"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${DATE}</a></time>
   <span class="tag-links">
     ${TAG_LINKS_LIST}
   </span>
